# bisec-tree

./: Makefile  README.md  bisec.opam  bisec_tree.ml  bisec_tree.mli  bst.opam  bunny.sh  dump.ml  dune  dune-project  itv.ml  jbuild  myArray.ml  test.ml
data/: bunny.txt
src/: bisec_tree.ml  bisec_tree.mli  dump.ml  dune  simplify.ml  test.ml
