opam-version: "1.2"
maintainer: "ligand@free.fr"
authors: ["Francois BERENGER"]
homepage: "https://github.com/UnixJunkie/bisec-tree"
bug-reports: "https://github.com/UnixJunkie/bisec-tree/issues"
dev-repo: "git+https://github.com/UnixJunkie/bisec-tree.git"
license: "BSD-3"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "parmap"
  "batteries"
]
